:bug: Fix ellipsis flicker and persistence issues when scrolling

--- a/styles/table-edit.less
+++ b/styles/table-edit.less
@@ -449,8 +449,8 @@ atom-table-editor {
         position: absolute;
         padding: 0.1em;
         border-radius: 0.2em;
-        right: 0.05em;
-        bottom: 0.05em;
+        right: 0.1em;
+        bottom: 0.1em;
       }
 
       &.active.ellipsis::after {
